# shadesofray

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  imgui.ini  shadesofray.code-workspace
src/: 3dmath.h  CMakeLists.txt  image.cpp  image.h  main.rs  pixel.h  renderer.cpp  renderer.h  stub.cpp
src/math/: 3dmath.hpp  vec.hpp
src/renderer/: CMakeLists.txt  image.cpp  image.hpp  pixel.hpp  pixelbuffer.hpp  renderer.cpp  renderer.hpp
src/util/: debug.hpp  logging.hpp
test/: CMakeLists.txt  raytracer.cpp
